tests/ui/endpoint/invalid_attribute.stderr
error: Invalid attribute syntax
 --> tests/ui/endpoint/invalid_attribute.rs:8:12
  |
8 | #[read_all(FooResource)]
  |            ^^^^^^^^^^^
